--- a/appbase/index.html
+++ b/appbase/index.html
@@ -104,6 +104,7 @@
               <span class="ac-status-chip__icon" aria-hidden="true">☁️</span>
               <span
                 class="ac-status-chip__label"
+                data-sync-master-label
                 data-i18n="app.panel.integrations.sync.label.off"
               >
                 Sync desativada
@@ -113,6 +114,7 @@
               <span class="ac-status-chip__icon" aria-hidden="true">💾</span>
               <span
                 class="ac-status-chip__label"
+                data-backup-master-label
                 data-i18n="app.panel.integrations.backup.label.off"
               >
                 Backup desativado
@@ -350,10 +352,17 @@
                   >
                     <header class="ac-panel-card__head">
                       <div class="ac-panel-card__titles">
-                        <h3 id="painel-sistema-title" class="ac-panel-card__title">
+                        <h3
+                          id="painel-sistema-title"
+                          class="ac-panel-card__title"
+                          data-i18n="app.panel.cards.sync.title"
+                        >
                           Sincronização
                         </h3>
-                        <p class="ac-panel-card__subtitle">
+                        <p
+                          class="ac-panel-card__subtitle"
+                          data-i18n="app.panel.cards.sync.description"
+                        >
                           Conecte o painel aos provedores suportados e distribua os dados.
                         </p>
                       </div>
@@ -366,7 +375,7 @@
                             data-sync-status-message
                             role="status"
                             aria-live="polite"
-                            data-i18n="app.panel.integrations.sync.status.inactive"
+                            data-i18n="app.panel.integrations.sync.status.off"
                           >
                             Sincronização desativada no momento.
                           </p>
@@ -392,8 +401,16 @@
                           <div class="ac-sync-provider__details">
                             <span class="ac-sync-provider__icon" aria-hidden="true">☁️</span>
                             <div class="ac-sync-provider__text">
-                              <h4 class="ac-sync-provider__name">Google Drive</h4>
-                              <p class="ac-sync-provider__description">
+                              <h4
+                                class="ac-sync-provider__name"
+                                data-i18n="app.panel.cards.sync.providers.google_drive.name"
+                              >
+                                Google Drive
+                              </h4>
+                              <p
+                                class="ac-sync-provider__description"
+                                data-i18n="app.panel.cards.sync.providers.google_drive.description"
+                              >
                                 Integração oficial com autenticação Google.
                               </p>
                             </div>
@@ -414,8 +431,16 @@
                           <div class="ac-sync-provider__details">
                             <span class="ac-sync-provider__icon" aria-hidden="true">🗂️</span>
                             <div class="ac-sync-provider__text">
-                              <h4 class="ac-sync-provider__name">OneDrive</h4>
-                              <p class="ac-sync-provider__description">
+                              <h4
+                                class="ac-sync-provider__name"
+                                data-i18n="app.panel.cards.sync.providers.microsoft_onedrive.name"
+                              >
+                                OneDrive
+                              </h4>
+                              <p
+                                class="ac-sync-provider__description"
+                                data-i18n="app.panel.cards.sync.providers.microsoft_onedrive.description"
+                              >
                                 Sincronize com contas corporativas Microsoft.
                               </p>
                             </div>
@@ -431,15 +456,19 @@
                       </div>
                       <dl class="ac-sync__meta">
                         <div class="ac-sync__meta-item">
-                          <dt>Última sincronização</dt>
+                          <dt data-i18n="app.panel.cards.sync.meta.last_sync">
+                            Última sincronização
+                          </dt>
                           <dd class="ac-mono" data-sync-last-update>—</dd>
                         </div>
                         <div class="ac-sync__meta-item">
-                          <dt>Servidor</dt>
+                          <dt data-i18n="app.panel.cards.sync.meta.server">Servidor</dt>
                           <dd class="ac-mono">api.marco.local</dd>
                         </div>
                         <div class="ac-sync__meta-item">
-                          <dt>Dispositivos conectados</dt>
+                          <dt data-i18n="app.panel.cards.sync.meta.devices">
+                            Dispositivos conectados
+                          </dt>
                           <dd class="ac-mono">0</dd>
                         </div>
                       </dl>
@@ -449,31 +478,58 @@
                   <article class="ac-panel-card ac-panel-card--backup">
                     <header class="ac-panel-card__head">
                       <div class="ac-panel-card__titles">
-                        <h3 class="ac-panel-card__title">Backup</h3>
-                        <p class="ac-panel-card__subtitle">
+                        <h3
+                          class="ac-panel-card__title"
+                          data-i18n="app.panel.cards.backup.title"
+                        >
+                          Backup
+                        </h3>
+                        <p
+                          class="ac-panel-card__subtitle"
+                          data-i18n="app.panel.cards.backup.description"
+                        >
                           Proteja registros críticos e restaure configurações em segundos.
                         </p>
                       </div>
                       <span class="ac-status-chip" role="status">
                         <span class="ac-status-chip__icon" aria-hidden="true">💾</span>
-                        <span class="ac-status-chip__label">Backup desativado</span>
+                        <span
+                          class="ac-status-chip__label"
+                          data-backup-master-label
+                          data-i18n="app.panel.integrations.backup.label.off"
+                        >
+                          Backup desativado
+                        </span>
                       </span>
                     </header>
                     <dl class="ac-info-list" role="list">
                       <div>
-                        <dt>Último backup</dt>
+                        <dt data-i18n="app.panel.cards.backup.meta.last_backup">
+                          Último backup
+                        </dt>
                         <dd class="ac-mono" data-backup-last>—</dd>
                       </div>
                       <div>
-                        <dt>Armazenamento</dt>
-                        <dd class="ac-mono" data-backup-target>Sem destino</dd>
+                        <dt data-i18n="app.panel.cards.backup.meta.storage">Armazenamento</dt>
+                        <dd
+                          class="ac-mono"
+                          data-backup-target
+                          data-i18n="app.panel.cards.backup.meta.storage_empty"
+                        >
+                          Sem destino
+                        </dd>
                       </div>
                       <div>
-                        <dt>Tamanho estimado</dt>
+                        <dt data-i18n="app.panel.cards.backup.meta.size">
+                          Tamanho estimado
+                        </dt>
                         <dd class="ac-mono" data-backup-size>0 KB</dd>
                       </div>
                     </dl>
-                    <p class="ac-panel-card__note">
+                    <p
+                      class="ac-panel-card__note"
+                      data-i18n="app.panel.cards.backup.note"
+                    >
                       Configure uma conta de nuvem ou exporte manualmente os dados para
                       garantir redundância.
                     </p>
@@ -482,27 +538,42 @@
                   <article class="ac-panel-card ac-panel-card--connectivity">
                     <header class="ac-panel-card__head">
                       <div class="ac-panel-card__titles">
-                        <h3 class="ac-panel-card__title">Conectividade</h3>
-                        <p class="ac-panel-card__subtitle">
+                        <h3
+                          class="ac-panel-card__title"
+                          data-i18n="app.panel.cards.connectivity.title"
+                        >
+                          Conectividade
+                        </h3>
+                        <p
+                          class="ac-panel-card__subtitle"
+                          data-i18n="app.panel.cards.connectivity.description"
+                        >
                           Parâmetros ativos e latência dos serviços em tempo real.
                         </p>
                       </div>
                     </header>
                     <dl class="ac-info-list" role="list">
                       <div>
-                        <dt>Endpoint</dt>
+                        <dt data-i18n="app.panel.cards.connectivity.meta.endpoint">
+                          Endpoint
+                        </dt>
                         <dd class="ac-mono" data-connect-endpoint>api.marco.local</dd>
                       </div>
                       <div>
-                        <dt>Região</dt>
+                        <dt data-i18n="app.panel.cards.connectivity.meta.region">Região</dt>
                         <dd class="ac-mono" data-connect-region>br-south</dd>
                       </div>
                       <div>
-                        <dt>Latência média</dt>
+                        <dt data-i18n="app.panel.cards.connectivity.meta.latency">
+                          Latência média
+                        </dt>
                         <dd class="ac-mono" data-connect-latency>—</dd>
                       </div>
                     </dl>
-                    <p class="ac-panel-card__note">
+                    <p
+                      class="ac-panel-card__note"
+                      data-i18n="app.panel.cards.connectivity.note"
+                    >
                       Monitore tempo de resposta e priorize links redundantes durante janelas
                       críticas de operação.
                     </p>
@@ -511,27 +582,48 @@
                   <article class="ac-panel-card ac-panel-card--security">
                     <header class="ac-panel-card__head">
                       <div class="ac-panel-card__titles">
-                        <h3 class="ac-panel-card__title">Segurança</h3>
-                        <p class="ac-panel-card__subtitle">
+                        <h3
+                          class="ac-panel-card__title"
+                          data-i18n="app.panel.cards.security.title"
+                        >
+                          Segurança
+                        </h3>
+                        <p
+                          class="ac-panel-card__subtitle"
+                          data-i18n="app.panel.cards.security.description"
+                        >
                           Sessões autenticadas, políticas aplicadas e eventos recentes.
                         </p>
                       </div>
                     </header>
                     <dl class="ac-info-list" role="list">
                       <div>
-                        <dt>Última revisão</dt>
+                        <dt data-i18n="app.panel.cards.security.meta.last_review">
+                          Última revisão
+                        </dt>
                         <dd class="ac-mono" data-security-last>—</dd>
                       </div>
                       <div>
-                        <dt>Status</dt>
-                        <dd class="ac-mono" data-security-status>Em análise</dd>
+                        <dt data-i18n="app.panel.cards.security.meta.status">Status</dt>
+                        <dd
+                          class="ac-mono"
+                          data-security-status
+                          data-i18n="app.panel.cards.security.status.pending"
+                        >
+                          Em análise
+                        </dd>
                       </div>
                       <div>
-                        <dt>Alertas ativos</dt>
+                        <dt data-i18n="app.panel.cards.security.meta.alerts">
+                          Alertas ativos
+                        </dt>
                         <dd class="ac-mono" data-security-alerts>0</dd>
                       </div>
                     </dl>
-                    <p class="ac-panel-card__note">
+                    <p
+                      class="ac-panel-card__note"
+                      data-i18n="app.panel.cards.security.note"
+                    >
                       Garanta autenticação multifator nos dispositivos conectados e revise
                       logs semanalmente.
                     </p>
