Padroniza cartões principais do painel

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -153,7 +153,10 @@
               </button>
 
               <div class="ac-panel__stack">
-                <section class="ac-card ac-panel-label" aria-labelledby="painel-stage-title">
+                <article
+                  class="ac-panel-card ac-panel-card--overview ac-panel-label"
+                  aria-labelledby="painel-stage-title"
+                >
                   <header class="ac-panel-label__head">
                     <div class="ac-panel-label__titles">
                       <h3
@@ -243,7 +246,7 @@
                     </div>
                   </div>
 
-                </section>
+                </article>
 
                 <article
                   class="ac-panel-card ac-panel-card--session ac-ctrl-session"
