Add profile management control and tests

--- a/appbase/index.html
+++ b/appbase/index.html
@@ -221,6 +221,14 @@
                     <button
                       class="ac-btn ac-btn--ghost"
                       type="button"
+                      data-action="profile-manage"
+                      data-i18n="app.panel.session.actions.manage_profiles"
+                    >
+                      Gerenciar perfis
+                    </button>
+                    <button
+                      class="ac-btn ac-btn--ghost"
+                      type="button"
                       data-action="logout-preserve"
                       data-i18n="app.panel.session.actions.logout"
                     >
